Added simple repeating background

--- a/miao-dentsu-thecnydash/miao-dentsu-thecnydash.vbproj
+++ b/miao-dentsu-thecnydash/miao-dentsu-thecnydash.vbproj
@@ -170,6 +170,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\background.png" />
     <Content Include="css\bootstrap.css" />
     <Content Include="css\bootstrap.min.css" />
     <None Include="My Project\Application.myapp">
@@ -182,6 +183,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="js\jquery-1.10.2.intellisense.js" />
+    <Content Include="js\game.js" />
     <Content Include="js\phaser.js" />
     <Content Include="js\jquery-1.10.2.js" />
     <Content Include="js\jquery-1.10.2.min.js" />
@@ -210,8 +212,6 @@
     <Content Include="css\Site.css" />
     <Content Include="js\_references.js" />
     <Content Include="Views\_ViewStart.vbhtml" />
-    <Content Include="Views\Home\About.vbhtml" />
-    <Content Include="Views\Home\Contact.vbhtml" />
     <Content Include="Views\Home\Index.vbhtml" />
     <Content Include="Views\Shared\_Layout.vbhtml" />
     <Content Include="Views\Web.config" />
